--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  background-color: #fff;
 }
 
+.dashboard-header {
+  background-color:#2A94E5;
+  padding-top: 2.5vh;
+  padding-bottom: 2.5vh;
+  margin-bottom: 2.5vh;
+  color: #434343;
+}
