--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #fff;
+  padding-bottom: 2.5vh;
 }
 
 .text-headers {
@@ -47,7 +48,6 @@ body {
 }
 
 /** DATA COMPONENT **/
-
 .data-info-text {
   color: #767676;
   font-size: 1.15rem;
