--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif !important; 
   background-color: #fff;
   padding-bottom: 2.5vh;
 }
